<resources>
    <string name="app_name">simplecrud</string>
    <string name="title_create">Create</string>
    <string name="title_list">List</string>
    <string name="title_exit">Exit</string>
    <string name="create_title">Create Product</string>
    <string name="name_field">Name</string>
    <string name="desc_field">Description</string>
    <string name="price_field">Price</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="btn_update">Update</string>
    <string name="edit_title">Update</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>