<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.create.CreateFragment"
    android:scrollbars="vertical"
    android:paddingBottom="50dp">


    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        >


        <TextView
            android:id="@+id/createTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_field"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_field"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/blue"/>
        <TextView
            android:id="@+id/desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_field"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/desc_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/desc_field"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/blue"/>
        <TextView
            android:id="@+id/price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_field"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/price_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/price_field"
            android:backgroundTint="@color/blue"/>
        <Button
            android:layout_gravity="center"
            android:clickable="true"
            android:enabled="true"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/title_create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:padding="10px"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>